--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -7,7 +7,14 @@
    "outputs": [],
    "source": [
     "from serde.json import to_json\n",
-    "from scraping import *"
+    "from scraping_m import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Marmiton"
    ]
   },
   {
@@ -47,6 +54,51 @@
     "\n",
     "with open(path, \"w\", encoding=\"utf-8\") as json_file:\n",
     "    json_file.write(res_json)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cuisine AZ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scraping_az import scrap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lien = \"https://www.cuisineaz.com/recettes/buche-de-noel-foret-noire-80094.aspx\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Recette(nom='Bûche de Noël forêt noire', note=None, temps='2 h 22 min', niveau='Intermédiaire', cout='1,80', nb_comment='1')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scrap(lien)"
    ]
   }
  ],
